--- a/templates/hello.html
+++ b/templates/hello.html
@@ -14,7 +14,7 @@
 L'exercice consiste à créer une nouvelle route accèssible depuis le chemin "/contact/" de votre site et qui affichera "Ma page de contact" dans le navigateur de l'internaute.
 L'internaute saisira l'adresse suivante dans son navigateur : <b>https://{Votre URL}/contact/</b> et obtiendra donc le résultat "Ma page de contact". Vous allez pour cela, depuis GitHUB, <b>ajouter</b> le code suivant dans votre fichier <b></b>__init__.py</b> qui est à la racine de votre Repository précédemment créé :
 <pre><code><xmp>
-@app.route("https://{https://linamedjmadj.alwaysdata.net"}/contact/)
+@app.route(https://linamedjmadj.alwaysdata.net"}/contact/)
 def MaPremiereAPI():
     return "<h2>Ma page de contact</h2>"
 </xmp></code></pre>
