--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Evaluation</title>
 <h1>Bienvenue sur votre projet Métriques</h1>
-<h2>Ceci est le projet de : Lina MEDJMADJ </h2>
+<h2>Ceci est le projet de : Ryan Vaugarni</h2>
 <p>Si vous avez mis en ligne votre solution et si cette page d'accueil s'affiche dans votre navigateur alors <b>vous avez déjà gagné 4 points</b> sur votre note d'évaluation.</p>
 <p>Notions acquises lors de cette étape : Vous avez lors cette première étape apris à créer votre hébergement en ligne sur Alwaydata, installer une application, Forker un projet GitHUB et créer des Secrets qui seront utilisés lors de vos Commits pour mettre à jour votre site en ligne</p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
@@ -14,7 +14,7 @@
 L'exercice consiste à créer une nouvelle route accèssible depuis le chemin "/contact/" de votre site et qui affichera "Ma page de contact" dans le navigateur de l'internaute.
 L'internaute saisira l'adresse suivante dans son navigateur : <b>https://{Votre URL}/contact/</b> et obtiendra donc le résultat "Ma page de contact". Vous allez pour cela, depuis GitHUB, <b>ajouter</b> le code suivant dans votre fichier <b></b>__init__.py</b> qui est à la racine de votre Repository précédemment créé :
 <pre><code><xmp>
-@app.route(https://linamedjmadj.alwaysdata.net/contact/)
+@app.route("/contact/")
 def MaPremiereAPI():
     return "<h2>Ma page de contact</h2>"
 </xmp></code></pre>
@@ -159,4 +159,4 @@ def extract_minutes(date_string):
         return jsonify({'minutes': minutes})
 </xmp></code></pre></p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
-<h2>FIN DU PROJET</h2>
+<h2>FIN DU PROJET</h2> 
